<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    tools:context=".MainActivity">

    <!--Scoreboard and Score Display-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Scoreboard/Rules-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:text="@string/scoreboard"
                android:textColor="@color/mainTextColor"
                android:textSize="@dimen/mainTextSize" />
            <TextView
                android:id="@+id/getrules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:text="@string/rulelink"
                android:textColor="@color/mainTextColor"
                android:textSize="@dimen/mainTextSize" />
        </RelativeLayout><!--Scoreboard/Rules-->

        <!--Sets TableView-->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            >
            <TableRow>
                <TextView
                    android:text="@string/sets"
                    android:layout_column="1"
                    android:layout_span="5"
                    android:textAlignment="center"
                    android:padding="@dimen/textview_small_padding" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_column="1"
                    android:text="1"
                    android:padding="@dimen/textview_small_padding" />
                <TextView
                    android:text="2"
                    android:padding="@dimen/textview_small_padding" />
                <TextView
                    android:text="3"
                    android:padding="@dimen/textview_small_padding" />
                <TextView
                    android:text="4"
                    android:padding="@dimen/textview_small_padding" />
                <TextView
                    android:text="5"
                    android:padding="@dimen/textview_small_padding" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/teamA"
                    android:paddingLeft="@dimen/textview_padding" />
                <TextView
                    android:id="@+id/team_a_set_1"
                    android:text=""
                    android:padding="@dimen/textview_small_padding" />
                <TextView
                    android:id="@+id/team_a_set_2"
                    android:text=""
                    android:padding="@dimen/textview_small_padding" />
                <TextView
                    android:id="@+id/team_a_set_3"
                    android:text=""
                    android:padding="@dimen/textview_small_padding" />
                <TextView
                    android:id="@+id/team_a_set_4"
                    android:text=""
                    android:padding="@dimen/textview_small_padding" />
                <TextView
                    android:id="@+id/team_a_set_5"
                    android:text=""
                    android:padding="@dimen/textview_small_padding" />
                <TextView
                    android:id="@+id/team_a_final"
                    android:text=""
                    android:padding="@dimen/textview_small_padding" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/teamB"
                    android:paddingLeft="@dimen/textview_padding" />
                <TextView
                    android:id="@+id/team_b_set_1"
                    android:text=""
                    android:padding="@dimen/textview_small_padding" />
                <TextView
                    android:id="@+id/team_b_set_2"
                    android:text=""
                    android:padding="@dimen/textview_small_padding" />
                <TextView
                    android:id="@+id/team_b_set_3"
                    android:text=""
                    android:padding="@dimen/textview_small_padding" />
                <TextView
                    android:id="@+id/team_b_set_4"
                    android:text=""
                    android:padding="@dimen/textview_small_padding" />
                <TextView
                    android:id="@+id/team_b_set_5"
                    android:text=""
                    android:padding="@dimen/textview_small_padding" />
                <TextView
                    android:id="@+id/team_b_final"
                    android:text=""
                    android:padding="@dimen/textview_small_padding" />
            </TableRow>
        </TableLayout><!--Sets TableView-->

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/activity_padding"
            android:layout_marginRight="@dimen/activity_padding"
            android:background="@android:color/darker_gray" />

        <!--Score Display-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding"
                    android:text="@string/teamA"
                    android:textColor="@color/mainTextColor"
                    android:textSize="@dimen/mainTextSize" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="@dimen/textview_big_padding"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/scoreTextSize" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/textview_padding"
                    android:layout_marginLeft="@dimen/textview_big_padding"
                    android:layout_marginRight="@dimen/textview_big_padding"
                    android:onClick="addForTeamA"
                    android:text="@string/point" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_padding"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="@dimen/textview_padding"
                    android:text="@string/teamB"
                    android:textColor="@color/mainTextColor"
                    android:textSize="@dimen/mainTextSize" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="@dimen/textview_big_padding"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/scoreTextSize" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/textview_padding"
                    android:layout_marginLeft="@dimen/textview_big_padding"
                    android:layout_marginRight="@dimen/textview_big_padding"
                    android:onClick="addForTeamB"
                    android:text="@string/point" />
            </LinearLayout>
        </LinearLayout> <!--Score Display-->

        <!--Announcement-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/textview_big_padding"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/announcementTextSize"
            android:id="@+id/announcement"
            android:text=""
            />

    </LinearLayout> <!--Scoreboard and Score Display-->

    <!--Reset Buttons-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_padding"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="resetSet"
            android:text="@string/resetSet" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="resetGame"
            android:text="@string/resetGame" />
    </LinearLayout><!--Reset Buttons-->

</RelativeLayout>

